--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,7 @@
 
 	<main>
 		<section class="section">
+
 			<div class="container">
 
 				<h1 class="visually-hidden">Портфоліо</h1>
@@ -85,12 +86,12 @@
 				<ul class="portfolio-work list">
 
 
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="">
-							<div class="portfolio-image">
+					<li class="portfolio-work__item">
+						<a class="portfolio-work__link" href="">
+							<div class="portfolio-work__image">
 								<img src="./images/website.jpg" alt="Ноутбук с зображенням сайту" width="370" />
 								<div class="overlay">
-									<p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+									<p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
 										сервісів. Все це
 										дозволить відвідувачу отримати
 										вичерпні відомості про компанію чи приватну особу.
@@ -98,18 +99,18 @@
 								</div>
 							</div>
 							<div class="portfolio-card">
-								<h3 class="portfolio-title">Технокряк</h3>
-								<p class="portfolio-text">Веб-сайт</p>
+								<h3 class="portfolio-card__title">Технокряк</h3>
+								<p class="portfolio-card__subtitle">Веб-сайт</p>
 							</div>
 						</a>
 					</li>
 
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="">
-							<div class="portfolio-image">
+					<li class="portfolio-work__item">
+						<a class="portfolio-work__link" href="">
+							<div class="portfolio-work__image">
 								<img src="./images/poster.jpg" alt="Два гравця в баскетбол" width="370" />
 								<div class="overlay">
-									<p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+									<p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
 										сервісів. Все це
 										дозволить відвідувачу отримати
 										вичерпні відомості про компанію чи приватну особу.
@@ -117,17 +118,17 @@
 								</div>
 							</div>
 							<div class="portfolio-card">
-								<h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-								<p class="portfolio-text">Дизайн</p>
+								<h3 class="portfolio-card__title">Постер New Orlean vs Golden Star</h3>
+								<p class="portfolio-card__subtitle">Дизайн</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="">
-							<div class="portfolio-image">
+					<li class="portfolio-work__item">
+						<a class="portfolio-work__link" href="">
+							<div class="portfolio-work__image">
 								<img src="./images/restaurant-seafood.jpg" alt="Емблема ресторану " width="370" />
 								<div class="overlay">
-									<p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+									<p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
 										сервісів. Все це
 										дозволить відвідувачу отримати
 										вичерпні відомості про компанію чи приватну особу.
@@ -135,17 +136,17 @@
 								</div>
 							</div>
 							<div class="portfolio-card">
-								<h3 class="portfolio-title">Ресторан Seafood</h3>
-								<p class="portfolio-text">Додаток</p>
+								<h3 class="portfolio-card__title">Ресторан Seafood</h3>
+								<p class="portfolio-card__subtitle">Додаток</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="">
-							<div class="portfolio-image">
+					<li class="portfolio-work__item">
+						<a class="portfolio-work__link" href="">
+							<div class="portfolio-work__image">
 								<img src="./images/restaurant-seafood.jpg" alt="Емблема ресторану " width="370" />
 								<div class="overlay">
-									<p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+									<p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
 										сервісів. Все це
 										дозволить відвідувачу отримати
 										вичерпні відомості про компанію чи приватну особу.
@@ -153,17 +154,17 @@
 								</div>
 							</div>
 							<div class="portfolio-card">
-								<h3 class="portfolio-title">Проєкт Prime</h3>
-								<p class="portfolio-text">Маркетинг</p>
+								<h3 class="portfolio-card__title">Проєкт Prime</h3>
+								<p class="portfolio-card__subtitle">Маркетинг</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="">
-							<div class="portfolio-image">
+					<li class="portfolio-work__item">
+						<a class="portfolio-work__link" href="">
+							<div class="portfolio-work__image">
 								<img src="./images/boxes.jpg" alt="Дві коробки" width="370" />
 								<div class="overlay">
-									<p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+									<p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
 										сервісів. Все це
 										дозволить відвідувачу отримати
 										вичерпні відомості про компанію чи приватну особу.
@@ -171,17 +172,17 @@
 								</div>
 							</div>
 							<div class="portfolio-card">
-								<h3 class="portfolio-title">Проєкт Boxes</h3>
-								<p class="portfolio-text">Додаток</p>
+								<h3 class="portfolio-card__title">Проєкт Boxes</h3>
+								<p class="portfolio-card__subtitle">Додаток</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="">
-							<div class="portfolio-image">
+					<li class="portfolio-work__item">
+						<a class="portfolio-work__link" href="">
+							<div class="portfolio-work__image">
 								<img src="./images/monoblock-apple.jpg" alt="Комп'ютер" width="370" />
 								<div class="overlay">
-									<p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+									<p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
 										сервісів. Все це
 										дозволить відвідувачу отримати
 										вичерпні відомості про компанію чи приватну особу.
@@ -189,17 +190,17 @@
 								</div>
 							</div>
 							<div class="portfolio-card">
-								<h3 class="portfolio-title">Inspiration has no Borders</h3>
-								<p class="portfolio-text">Веб-сайт</p>
+								<h3 class="portfolio-card__title">Inspiration has no Borders</h3>
+								<p class="portfolio-card__subtitle">Веб-сайт</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="">
-							<div class="portfolio-image">
+					<li class="portfolio-work__item">
+						<a class="portfolio-work__link" href="">
+							<div class="portfolio-work__image">
 								<img src="./images/magazine.jpg" alt="Журнал" width="370" />
 								<div class="overlay">
-									<p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+									<p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
 										сервісів. Все це
 										дозволить відвідувачу отримати
 										вичерпні відомості про компанію чи приватну особу.
@@ -207,17 +208,17 @@
 								</div>
 							</div>
 							<div class="portfolio-card">
-								<h3 class="portfolio-title">Видання Limited Edition</h3>
-								<p class="portfolio-text">Дизайн</p>
+								<h3 class="portfolio-card__title">Видання Limited Edition</h3>
+								<p class="portfolio-card__subtitle">Дизайн</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="">
-							<div class="portfolio-image">
+					<li class="portfolio-work__item">
+						<a class="portfolio-work__link" href="">
+							<div class="portfolio-work__image">
 								<img src="./images/label.jpg" alt="Лейба" width="370" />
 								<div class="overlay">
-									<p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+									<p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
 										сервісів. Все це
 										дозволить відвідувачу отримати
 										вичерпні відомості про компанію чи приватну особу.
@@ -225,17 +226,17 @@
 								</div>
 							</div>
 							<div class="portfolio-card">
-								<h3 class="portfolio-title">Проєкт LAB</h3>
-								<p class="portfolio-text">Маркетинг</p>
+								<h3 class="portfolio-card__title">Проєкт LAB</h3>
+								<p class="portfolio-card__subtitle">Маркетинг</p>
 							</div>
 						</a>
 					</li>
-					<li class="portfolio-item">
-						<a class="portfolio-link" href="">
-							<div class="portfolio-image">
+					<li class="portfolio-work__item">
+						<a class="portfolio-work__link" href="">
+							<div class="portfolio-work__image">
 								<img src="./images/growing-business.jpg" alt="Людина працює за ноутбуком" width="370" />
 								<div class="overlay">
-									<p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+									<p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
 										сервісів. Все це
 										дозволить відвідувачу отримати
 										вичерпні відомості про компанію чи приватну особу.
@@ -243,8 +244,8 @@
 								</div>
 							</div>
 							<div class="portfolio-card">
-								<h3 class="portfolio-title" lang="en">Growing Business</h3>
-								<p class="portfolio-text">Додаток</p>
+								<h3 class="portfolio-card__title" lang="en">Growing Business</h3>
+								<p class="portfolio-card__subtitle">Додаток</p>
 							</div>
 						</a>
 					</li>
