--- a/portfolio.html
+++ b/portfolio.html
@@ -64,21 +64,21 @@
 			<div class="container">
 
 				<h1 class="visually-hidden">Портфоліо</h1>
-				<ul class="list filter-list">
+				<ul class="list filter">
 					<li>
-						<button class="portfolio-button" type="button">Усі</button>
+						<button class="filter-button" type="button">Усі</button>
 					</li>
 					<li>
-						<button class="portfolio-button" type="button">Веб-сайти</button>
+						<button class="filter-button" type="button">Веб-сайти</button>
 					</li>
 					<li>
-						<button class="portfolio-button" type="button">Додатки</button>
+						<button class="filter-button" type="button">Додатки</button>
 					</li>
 					<li>
-						<button class="portfolio-button" type="button">Дизайн</button>
+						<button class="filter-button" type="button">Дизайн</button>
 					</li>
 					<li>
-						<button class="portfolio-button" type="button">Маркетинг</button>
+						<button class="filter-button" type="button">Маркетинг</button>
 					</li>
 				</ul>
 
