--- a/portfolio.html
+++ b/portfolio.html
@@ -253,21 +253,22 @@
 			</div>
 		</section>
 	</main>
+
 	<footer class="page-footer">
 		<div class="container footer-container">
-			<div class="footer-main">
-				<a class="logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+			<div class="footer-address">
+				<a class="logo" href="./index.html">Web<span class="footer-address__logo">Studio</span></a>
 				<address class="address">
 					<ul class="list">
-						<li class="address-footer">
+						<li class="footer-address__street">
 							<a class="link" href="https://goo.gl/maps/2ffVsnF2zKhLbxtcA" target="_blank"
 								rel="noopener noreferrer nofollow">м.
 								Київ, пр-т Лесі Українки, 26</a>
 						</li>
-						<li class="mail-footer">
+						<li class="footer-address__mail">
 							<a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 						</li>
-						<li class="phone-footer">
+						<li class="footer-address__tel">
 							<a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
 						</li>
 					</ul>
@@ -275,31 +276,31 @@
 			</div>
 			<div class="footer-network">
 				<h3 class="footer-title">приєднуйтесь</h3>
-				<ul class="list network-list">
-					<li class="network-item">
-						<a class="link network-link" href="">
-							<svg class="network-icon" width="20" height="20">
+				<ul class="list footer-network__list">
+					<li>
+						<a class="link footer-network__link" href="">
+							<svg class="footer-network__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-instagram"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="network-item">
-						<a class="network-link" href="">
-							<svg class="network-icon" width="20" height="20">
+					<li>
+						<a class="footer-network__link" href="">
+							<svg class="footer-network__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-twitter"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="network-item">
-						<a class="network-link" href="">
-							<svg class="network-icon" width="20" height="20">
+					<li>
+						<a class="footer-network__link" href="">
+							<svg class="footer-network__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-facebook"></use>
 							</svg>
 						</a>
 					</li>
-					<li class="network-item">
-						<a class="network-link" href="">
-							<svg class="network-icon" width="20" height="20">
+					<li>
+						<a class="footer-network__link" href="">
+							<svg class="footer-network__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-linkedin"></use>
 							</svg>
 						</a>
@@ -309,10 +310,10 @@
 
 			<div class="footer-mailing">
 				<h3 class="footer-title">Підпишіться на розсилку</h3>
-				<ul class="list mailing-list">
-					<li><input class="footer-frm" id="mail" type="email" name="mail" placeholder="E-mail" /></li>
-					<li><button class="footer-btn" type="button">Підписатися
-							<svg class="icon-mailing" width="20" height="20">
+				<ul class="list footer-mailing__list">
+					<li><input class="footer-mailing__frm" id="mail" type="email" name="mail" placeholder="E-mail" /></li>
+					<li><button class="footer-mailing__btn" type="button">Підписатися
+							<svg class="footer-mailing__icon" width="20" height="20">
 								<use href="./images/icons.svg#icon-send"></use>
 							</svg>
 						</button></li>
@@ -322,6 +323,7 @@
 		</div>
 
 	</footer>
+
 </body>
 
 </html>
