--- a/portfolio.html
+++ b/portfolio.html
@@ -98,9 +98,9 @@
 									</p>
 								</div>
 							</div>
-							<div class="portfolio-card">
-								<h3 class="portfolio-card__title">Технокряк</h3>
-								<p class="portfolio-card__subtitle">Веб-сайт</p>
+							<div class="portfolio-work__card">
+								<h3 class="portfolio-work__title">Технокряк</h3>
+								<p class="portfolio-work__subtitle">Веб-сайт</p>
 							</div>
 						</a>
 					</li>
@@ -117,9 +117,9 @@
 									</p>
 								</div>
 							</div>
-							<div class="portfolio-card">
-								<h3 class="portfolio-card__title">Постер New Orlean vs Golden Star</h3>
-								<p class="portfolio-card__subtitle">Дизайн</p>
+							<div class="portfolio-work__card">
+								<h3 class="portfolio-work__title">Постер New Orlean vs Golden Star</h3>
+								<p class="portfolio-work__subtitle">Дизайн</p>
 							</div>
 						</a>
 					</li>
@@ -135,9 +135,9 @@
 									</p>
 								</div>
 							</div>
-							<div class="portfolio-card">
-								<h3 class="portfolio-card__title">Ресторан Seafood</h3>
-								<p class="portfolio-card__subtitle">Додаток</p>
+							<div class="portfolio-work__card">
+								<h3 class="portfolio-work__title">Ресторан Seafood</h3>
+								<p class="portfolio-work__subtitle">Додаток</p>
 							</div>
 						</a>
 					</li>
@@ -153,9 +153,9 @@
 									</p>
 								</div>
 							</div>
-							<div class="portfolio-card">
-								<h3 class="portfolio-card__title">Проєкт Prime</h3>
-								<p class="portfolio-card__subtitle">Маркетинг</p>
+							<div class="portfolio-work__card">
+								<h3 class="portfolio-work__title">Проєкт Prime</h3>
+								<p class="portfolio-work__subtitle">Маркетинг</p>
 							</div>
 						</a>
 					</li>
@@ -171,9 +171,9 @@
 									</p>
 								</div>
 							</div>
-							<div class="portfolio-card">
-								<h3 class="portfolio-card__title">Проєкт Boxes</h3>
-								<p class="portfolio-card__subtitle">Додаток</p>
+							<div class="portfolio-work__card">
+								<h3 class="portfolio-work__title">Проєкт Boxes</h3>
+								<p class="portfolio-work__subtitle">Додаток</p>
 							</div>
 						</a>
 					</li>
@@ -189,9 +189,9 @@
 									</p>
 								</div>
 							</div>
-							<div class="portfolio-card">
-								<h3 class="portfolio-card__title">Inspiration has no Borders</h3>
-								<p class="portfolio-card__subtitle">Веб-сайт</p>
+							<div class="portfolio-work__card">
+								<h3 class="portfolio-work__title">Inspiration has no Borders</h3>
+								<p class="portfolio-work__subtitle">Веб-сайт</p>
 							</div>
 						</a>
 					</li>
@@ -207,9 +207,9 @@
 									</p>
 								</div>
 							</div>
-							<div class="portfolio-card">
-								<h3 class="portfolio-card__title">Видання Limited Edition</h3>
-								<p class="portfolio-card__subtitle">Дизайн</p>
+							<div class="portfolio-work__card">
+								<h3 class="portfolio-work__title">Видання Limited Edition</h3>
+								<p class="portfolio-work__subtitle">Дизайн</p>
 							</div>
 						</a>
 					</li>
@@ -225,9 +225,9 @@
 									</p>
 								</div>
 							</div>
-							<div class="portfolio-card">
-								<h3 class="portfolio-card__title">Проєкт LAB</h3>
-								<p class="portfolio-card__subtitle">Маркетинг</p>
+							<div class="portfolio-work__card">
+								<h3 class="portfolio-work__title">Проєкт LAB</h3>
+								<p class="portfolio-work__subtitle">Маркетинг</p>
 							</div>
 						</a>
 					</li>
@@ -243,9 +243,9 @@
 									</p>
 								</div>
 							</div>
-							<div class="portfolio-card">
-								<h3 class="portfolio-card__title" lang="en">Growing Business</h3>
-								<p class="portfolio-card__subtitle">Додаток</p>
+							<div class="portfolio-work__card">
+								<h3 class="portfolio-work__title" lang="en">Growing Business</h3>
+								<p class="portfolio-work__subtitle">Додаток</p>
 							</div>
 						</a>
 					</li>
