--- a/portfolio.html
+++ b/portfolio.html
@@ -257,7 +257,7 @@
 	<footer class="page-footer">
 		<div class="container footer-container">
 			<div class="footer-address">
-				<a class="logo" href="./index.html">Web<span class="footer-address__logo">Studio</span></a>
+				<a class="logo" href="./index.html">Web<span class="logo__footer">Studio</span></a>
 				<address class="address">
 					<ul class="list">
 						<li class="footer-address__street">
